Corrigindo bug de toList